WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55060
Include frame numbers in backtraces
https://bugs.webkit.org/show_bug.cgi?id=55060
Summary
Include frame numbers in backtraces
mitz
Reported
2011-02-23 10:52:00 PST
Include frame numbers in backtraces
Attachments
Patch
(1.41 KB, patch)
2011-02-23 10:53 PST
,
mitz
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-02-23 10:53:31 PST
Created
attachment 83503
[details]
Patch
mitz
Comment 2
2011-02-23 11:01:53 PST
Committed
r79461
.
WebKit Review Bot
Comment 3
2011-02-23 11:43:58 PST
http://trac.webkit.org/changeset/79461
might have broken Qt Linux Release The following tests are not passing: fast/overflow/overflow-height-float-not-removed-crash3.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug