Include frame numbers in backtraces. https://bugs.webkit.org/show_bug.cgi?id=55060

Reviewed by Gavin Barraclough.

* wtf/Assertions.cpp:



Canonical link: https://commits.webkit.org/69381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79461 268f45cc-cd09-0410-ab3c-d52691b4dbfc